change model result to template, created template_name, temp_name_mids as middle table.

--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -2,8 +2,8 @@
 <hr>
 
 
-<%= form_tag results_path method: :post do %>
-  测试模板名称：<%= text_field_tag "result[name]"%><br>
+<%= form_tag templates_path method: :post do %>
+  测试模板名称：<%= text_field_tag "template[name]"%><br>
   样品信息：<br>
   <%= select_tag(:sample_id, options_for_select(Sample.pluck(:name, :id)))%>
 
@@ -15,7 +15,7 @@
     <%= check_box_tag("item[#{item_id}]")%>
     <%= label_tag("item[#{item_id}]", item)%>
   <% end %>
-
+  <br>
   <%= submit_tag "测试项目选好了" %>
 <% end %>
 <%= link_to "添加表内没有的测试项目", new_item_path %>
