bug in template#new.

--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -9,15 +9,27 @@
   测试模板名称：<%= text_field_tag "template_name[name]"%><br>
   样品信息：<br>
   <%= select_tag(:sample_id, options_for_select(Sample.pluck(:name, :id)))%>
-
   <hr>
 
-  测试项目：<br>
-  <% Item.pluck(:name, :id).each do |item, item_id| %>
-    <%= check_box_tag("item[#{item_id}]")%>
-    <%= label_tag("item[#{item_id}]", item)%>
-  <% end %>
-  <br>
-  <%= submit_tag "测试项目选好了" %>
+<h2>测试项目：</h2>
+
+  <table>
+    <% Item.pluck(:name, :id).each do |item, item_id| %>
+    <tr>
+      <td><%= check_box_tag("item[#{item_id}]") %></td>
+      <td><%= label_tag("item[#{item_id}]", item) %></td>
+
+      <% Template.pluck(:value, :id).each do |value, t_id| %>
+        <td><%= text_field_tag ("[#{value}]") %></td>
+      <% end %>
+
+    </tr>
+    <% end %>
+  </table>
+
+    <%= submit_tag "测试项目选好了" %>
+
 <% end %>
+
+
 <%= link_to "添加表内没有的测试项目", new_item_path %>
