add basic navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div>
+      <%= render "common/navbar"%>
+      <%= yield %>
+    </div>
   </body>
 </html>
