--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body>
     <%= render 'layouts/menu' %>
     <div class='container'>
+      <% unless flash[:notice].blank? %>
+        <div class="alert alert-info"><%= flash[:notice] %></div>
+      <% end %>
       <%= yield %>
     </div>
     <%= javascript_include_tag 'application' %>
