--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="form-group">
     <div class="col-lg-12">
-      <input type="submit" name="creae_user_submit" value="创建账户"
+      <input type="submit" name="create_user_submit" value="创建账户"
               class="col-xs-12 btn btn-primary">
     </div>
   </div>
