finished category root CRUD.

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Categories#index</h1>
-<p>Find me in app/views/admin/categories/index.html.erb</p>
+<div>
+  <div class="pull-right">
+    <%= link_to "新建样品分类", new_admin_category_path, class: "btn btn-primary" %>
+  </div>
+  <h1>样品分类(共有<%= @categories.total_entries %>个)
+  <!-- total_entries为will_paginate的方法，取出所有数目 -->
+</div>
+
+<div>
+  <table class="table table-striped">
+    <tr>
+      <th>ID</th>
+      <th>名称</th>
+      <th></th>
+    </tr>
+
+    <% @categories.each do |category| %>
+      <tr>
+        <td><%= category.id %></td>
+        <td><%= category.title %></td>
+        <td align="right">
+          <%= link_to "编辑", edit_admin_category_path(category) %> |
+          <%= link_to "删除", admin_category_path(category), method: :delete, 'data-confirm': "确定要删除吗？" %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+  <%= will_paginate @categories %>
+
+</div>
