--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,2 +1,52 @@
-<h1>Admin::Categories#new</h1>
-<p>Find me in app/views/admin/categories/new.html.erb</p>
+<div>
+  <h1><%= @category.new_record? ? "新建样品分类" : "修改样品分类##{params[:id]}" %></h1>
+</div>
+
+<div class="form-body">
+  <%= form_for @category,
+    url: (@category.new_record? ? admin_categories_path : admin_category_path(@category)),
+    method: (@category.new_record? ? 'post' : 'put'),
+    html: {class: 'form-horizontal'} do |f| %>
+
+    <% if @category.errors.any? %>
+      <div class="alert alert-danger">
+        <ul class="list-unstyled">
+          <% @category.errors.messages.values.flatten.each do |error| %>
+            <li><i class="fa fa-exclamation-circle"></li> <%= error %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <label for="ancestry" class="col-sm-2 control-label">所属分类 :</label>
+      <div class="col-sm-5">
+        <select name="category[ancestry]">
+          <option></option>
+          <% @root_categories.each do |category| %>
+            <% next if category == @category %>
+            <option value="<%= category.id %>" <%= @category.ancestry == category.id.to_s ?
+              'selected' : '' %>><%= category.title %>
+            </option>
+          <% end %>
+        </select>
+        若为一级分类，此项为空
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">分类名称:</label>
+      <div class="col-sm-5">
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-8">
+        <%= f.submit (@category.new_record? ? "新建样品分类" : "编辑产品分类"), class: "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+
+  
+</div>
