--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,7 +2,14 @@
   <div class="pull-right">
     <%= link_to "新建样品分类", new_admin_category_path, class: "btn btn-primary" %>
   </div>
-  <h1>样品分类(共有<%= @categories.total_entries %>个)
+  <h1>
+    <% if @category%>
+      分类:<%= @category.title %>(<%= @categories.total_entries %>)
+    <% else %>
+      分类:(<%= @categories.total_entries %>)
+    <% end %>
+  </h1>
+  <br>
   <!-- total_entries为will_paginate的方法，取出所有数目 -->
 </div>
 
@@ -19,8 +26,12 @@
         <td><%= category.id %></td>
         <td><%= category.title %></td>
         <td align="right">
-          <%= link_to "编辑", edit_admin_category_path(category) %> |
-          <%= link_to "删除", admin_category_path(category), method: :delete, 'data-confirm': "确定要删除吗？" %>
+          <%= link_to "编辑分类", edit_admin_category_path(category) %> |
+          <%= link_to "删除分类", admin_category_path(category), method: :delete,
+            'data-confirm': "如有子分类，子分类会一并删除。你确定要删除吗？" %>|
+          <% if category.root? %>
+            <%= link_to "查看子分类", admin_categories_path(id: category)%>
+          <% end %>
         </td>
       </tr>
     <% end %>
