--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -37,6 +37,6 @@
     <% end %>
   </table>
 
-  <%= will_paginate @categories %>
+  <%= will_paginate @categories, renderer: BootstrapPagination::Rails%>
 
 </div>
