doing samples CRUD, not finished, has bugs.

--- a/app/views/admin/layouts/_menu.html.erb
+++ b/app/views/admin/layouts/_menu.html.erb
@@ -17,9 +17,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="<%= admin_root_path %>">Home <span class="sr-only">(current)
         </span></a></li>
-        <li><a href="<%= admin_categories_path %>">分类</a></li>
+        <li><a href="<%= admin_samples_path %>">样品</a></li>
+        <li><a href="<%= admin_categories_path %>">样品分类</a></li>
       </ul>
-
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
