--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -18,6 +18,8 @@
         <li class="active"><a href="<%= root_path %>">Home <span class="sr-only">(current)
         </span></a></li>
         <li><a href="#">分类</a></li>
+        <li><a href="<%= samples_path %>">样品</a></li>
+
       </ul>
 
       <form class="navbar-form navbar-left">
