--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -1,3 +1,45 @@
+<div>
+  <div class="pull-right">
+    <%= link_to "新建样品", new_sample_path, class: "btn btn-primary" %>
+  </div>
+  <h1>
+    样品(<%= @samples.total_entries %>)
+  </h1>
+  <br>
+  <!-- total_entries为will_paginate的方法，取出所有数目 -->
+</div>
+
+<div>
+  <table class="table table-striped">
+    <tr>
+      <th>ID</th>
+      <th>样品名称</th>
+      <th>样品编码</th>
+      <th>描述</th>
+      <th></th>
+    </tr>
+
+    <% @samples.each do |sample| %>
+      <tr>
+        <td><%= sample.id %></td>
+        <td><%= sample.name %></td>
+        <td><%= sample.code %></td>
+        <td><%= sample.description %></td>
+        <td align="right">
+          <%= link_to "编辑样品", edit_sample_path(sample) %> |
+          <%= link_to "删除样品", sample_path(sample), method: :delete,
+            'data-confirm': "你确定要删除吗？" %>|
+        </td>
+      </tr>
+    <% end %>
+  </table>
+</div>
+
+<div>
+  <%= will_paginate @categories, renderer: BootstrapPagination::Rails%>
+</div>
+
+
 <h1>样品</h1>
 <hr>
 <table>
@@ -5,6 +47,7 @@
     <td>序号</td>
     <td>样品名称</td>
     <td>样品编号</td>
+    <td></td>
   </tr>
   <% @samples.each_with_index do |sample, index| %>
     <tr>
@@ -20,4 +63,4 @@
   </tr>
 
 </table>
-<%= link_to "查看测试模板", templates_path %>
+<%#= link_to "查看测试模板", templates_path %>
