modified menu drop-down function.

--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -37,7 +37,7 @@
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">分类名称:</label>
       <div class="col-sm-5">
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.text_field :title, class: "form-control", require: true %>
       </div>
     </div>
 
