--- a/app/views/admin/layouts/admin.html.erb
+++ b/app/views/admin/layouts/admin.html.erb
@@ -6,7 +6,7 @@
     maximum-scale=1.0, user-scalable=no">
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag 'admin', media: 'all' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= yield :stylesheets %>
   </head>
 
@@ -18,7 +18,7 @@
       <% end %>
       <%= yield %>
     </div>
-    <%= javascript_include_tag 'admin' %>
+    <%= javascript_include_tag 'application' %>
     <%= yield :javascripts %>
   </body>
 
