modified bugs in admin/category#new, admin/samples#new

--- a/app/views/admin/samples/new.html.erb
+++ b/app/views/admin/samples/new.html.erb
@@ -40,14 +40,14 @@
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">样品名称:</label>
       <div class="col-sm-5">
-        <%= f.text_field :name, class: "form-control" %>
+        <%= f.text_field :name, class: "form-control", required: true %>
       </div>
     </div>
 
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">样品编码:</label>
       <div class="col-sm-5">
-        <%= f.text_field :code, class: "form-control" %>
+        <%= f.text_field :code, class: "form-control", required: true %>
       </div>
     </div>
 
