--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <div class="form-group">
-      <label for="ancestry" class="col-sm-2 control-label">所属分类 :</label>
+      <label for="ancestry" class="col-sm-2 control-label">所属分类:</label>
       <div class="col-sm-5">
         <select name="category[ancestry]">
           <option></option>
@@ -37,7 +37,7 @@
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">分类名称:</label>
       <div class="col-sm-5">
-        <%= f.text_field :title, class: "form-control", require: true %>
+        <%= f.text_field :title, class: "form-control", required: true %>
       </div>
     </div>
 
