--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1><%= @category.new_record? ? "新建样品分类" : "修改样品分类##{params[:id]}" %></h1><hr>
+  <h2><%= @category.new_record? ? "新建样品分类" : "修改样品分类##{params[:id]}" %></h2><hr>
 </div>
 
 <div class="form-body">
@@ -23,7 +23,7 @@
       <div class="col-sm-5">
         <select name="category[ancestry]">
           <option></option>
-          <% @root_categories.each do |category| %>
+          <% @categories.each do |category| %>
             <% next if category == @category %>
             <option value="<%= category.id %>" <%= @category.ancestry == category.id.to_s ?
               'selected' : '' %>><%= category.title %>
