doing sample#new with bugs. Category cannot be selected.

--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -12,7 +12,7 @@
       <div class="alert alert-danger">
         <ul class="list-unstyled">
           <% @category.errors.messages.values.flatten.each do |error| %>
-            <li><i class="fa fa-exclamation-circle"></li> <%= error %></li>
+            <li><i class="fa fa-exclamation-circle"><%= error %></li>
           <% end %>
         </ul>
       </div>
