--- a/app/views/admin/templates/index.html.erb
+++ b/app/views/admin/templates/index.html.erb
@@ -1,8 +1,5 @@
 <h1>测试项目</h1>
 
-<%= link_to '生产监控', '#' %>
-<%= link_to '外来样品', '#' %>
-<%= link_to '新品研发', '#' %>
 <hr>
 
 <table>
@@ -24,4 +21,4 @@
 
 </table>
 <br>
-<%= link_to "添加模板", new_template_path %>
+<%= link_to "添加模板", new_admin_template_path %>
