--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -10,12 +10,12 @@
     <tr>
       <td><%= index + 1 %></td>
       <td><%= item.name %></td>
-      <td><%= link_to "编辑", edit_item_path(item) %></td>
-      <td><%= link_to "删除", item, method: :delete %></td>
+      <td><%= link_to "编辑", edit_admin_item_path(item) %></td>
+      <td><%= link_to "删除", admin_item_path(item), method: :delete %></td>
     </tr>
   <% end %>
   <tr>
-    <td><%= link_to "添加", new_item_path %></td>
+    <td><%= link_to "添加", new_admin_item_path %></td>
   </tr>
 
 </table>
