--- a/app/views/admin/layouts/_menu.html.erb
+++ b/app/views/admin/layouts/_menu.html.erb
@@ -19,6 +19,8 @@
         </span></a></li>
         <li><a href="<%= admin_samples_path %>">样品</a></li>
         <li><a href="<%= admin_categories_path %>">样品分类</a></li>
+        <li><a href="<%= admin_items_path %>">测试项目</a></li>
+        <li><a href="#">测试数据</a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
