--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,23 +1,25 @@
-<h1>测试项目</h1>
-<hr>
+<div>
+  <div class="pull-right">
+    <%= link_to "添加检测项目", new_admin_item_path, class: "btn btn-primary" %>
+  </div>
+  <h1>
+    样品(<%= @items.count %>)
+  </h1>
+</div>
 
-<table>
-  <tr>
-    <td>序号</td>
-    <td>测试项目</td>
-  </tr>
-  <% @items.each_with_index do |item, index| %>
+<div>
+  <table class="table table-striped">
     <tr>
-      <td><%= index + 1 %></td>
-      <td><%= item.name %></td>
-      <td><%= link_to "编辑", edit_admin_item_path(item) %></td>
-      <td><%= link_to "删除", admin_item_path(item), method: :delete %></td>
+      <td>序号</td>
+      <td>测试项目</td>
     </tr>
-  <% end %>
-  <tr>
-    <td><%= link_to "添加", new_admin_item_path %></td>
-  </tr>
-
-</table>
+    <% @items.each_with_index do |item, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%= item.name %></td>
+      </tr>
+    <% end %>
+  </table>
+</div>
 <br>
-<%= link_to "添加样品", new_sample_path %>
+<%= link_to "添加样品", new_sample_path, class: "btn btn-primary" %>
