--- a/app/views/admin/samples/new.html.erb
+++ b/app/views/admin/samples/new.html.erb
@@ -22,15 +22,8 @@
       <label for="category_id" class="col-sm-2 control-label">所属分类:</label>
       <div class="col-sm-5">
         <select name="sample[category_id]">
-          <option></option>
-          <% @root_categories.each do |category| %>
-            <optgroup label="<% category.title %>"></optgroup>
-
-            <% category.children.each do |sub_category| %>
-              <option value="<%= sub_category.id %>" <%= @sample.category_id == sub_category.id ?
-              'selected' : '' %>> <%= sub_category.title %>
-              </option>
-            <% end %>
+          <% @categories.each do |category| %>
+            <option label="<% category.id %>"><%= category.title %></option>
           <% end %>
         </select>
         若为一级样品，此项为空
